<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_gravity="left|center_vertical"
        android:paddingLeft="5dp"
        android:textSize="30sp"
        android:text="@string/title_activity_setup"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/textView_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="1"
        android:text="@string/device_code"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
        

    <EditText
        android:id="@+id/editText_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_code">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="3"
        android:text="@string/device_key"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="4"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_key" />

    <TextView
        android:id="@+id/textView_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="5"
        android:text="@string/device_host"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="6"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_host">
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="7"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="@string/button_save"
        android:onClick="saveSettings" />

</GridLayout>